[gd_scene load_steps=17 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/spriteBaseEnemiga3.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/spriteBaseEnemiga2.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/spriteBaseEnemiga1.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/spriteBaseEnemiga4.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/Enemigos/Area2D.gd" type="Script" id=6]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga.gd" type="Script" id=7]
[ext_resource path="res://Juego/Naves/Estaciones/PuntosSpawn.gd" type="Script" id=8]
[ext_resource path="res://Juego/Naves/Enemigos/EnemigoOrbital.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=4]
radius = 58.0
height = 384.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 23.0
height = 26.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 22, 52 )

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZona:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.435294, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "pendulo"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 0.0, -45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZona:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.435294, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_antihorario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZona:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.435294, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZona:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.435294, 1, 0 ) ]
}

[node name="BaseEnemiga" type="Node2D"]
position = Vector2( -5, 67 )
z_index = 35
z_as_relative = false
script = ExtResource( 7 )
orbital = ExtResource( 9 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 1, -46 )

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 158, -98 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 279, 59 )
texture = ExtResource( 3 )
offset = Vector2( -279, -59 )

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 4, -265 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 4, -218 )
texture = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 13
script = ExtResource( 6 )

[node name="CollisionShapeCuerpo" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 5, -95 )
shape = SubResource( 4 )

[node name="CollisionShapeBrazoI" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -101, -144 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShapeBrazoI2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 148, -144 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, -47 )

[node name="SpriteZona" parent="AreaAtraccion" index="1"]
self_modulate = Color( 0, 0.435294, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )
anims/pendulo = SubResource( 7 )
anims/rotacion_antihorario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PuntosSpawn" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Norte" type="Position2D" parent="PuntosSpawn"]
position = Vector2( 5, -453 )

[node name="Sur" type="Position2D" parent="PuntosSpawn"]
position = Vector2( 5, 299 )

[node name="Este" type="Position2D" parent="PuntosSpawn"]
position = Vector2( 340, -67 )

[node name="Oeste" type="Position2D" parent="PuntosSpawn"]
position = Vector2( -310, -67 )

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]

[editable path="AreaAtraccion"]
